# classifier-free-guidance

./: .gitignore  README.md  pyproject.toml
src/cfg-diffusion/: diffusion.py  snippet.py  train.py
src/cfg-diffusion/models/: unet_periodic.py
src/cfg_diffusion/: diffusion.py  train.py  video_diffusion.py  video_diffusion_cc.py
src/cfg_diffusion/models/: unet_periodic.py  unet_periodic_compilable.py  unet_video.py  unet_video_backup.py  unet_video_enhanced.py  unet_video_enhanced_cc.py  unet_video_spatiotemporal.py
src/cfg_diffusion/utils/: flags.py
src/experiments/: base_experiment.py  video_experiment.py  video_experiment_cc.py
src/experiments/configs/: common.py  config.py  video.py  video_common.py  video_config.py  wandb.py
